--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dnd-toolkit",
   "version": "1.0.0",
   "description": "Tools for DnD",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
     "test": "test"
   },
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/GreyAlien502/DnD-toolkit/issues"
   },
-  "homepage": "https://github.com/GreyAlien502/DnD-toolkit#readme"
+  "homepage": "https://github.com/GreyAlien502/DnD-toolkit#readme",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.11.0"
+  }
 }
