--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "material-ui": "^1.0.0-beta.34",
     "prop-types": "15",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-dual-listbox": "^1.3.2"
   },
   "peerDependencies": {
     "react": "0.14 || 15 || 16"
