--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-dual-listbox": "^1.3.2"
+    "react-dual-listbox": "^1.3.2",
+    "shallowequal": "^1.0.2"
   },
   "peerDependencies": {
     "react": "0.14 || 15 || 16"
